# async-graphql-dataloader

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README.pt-BR.md
.github/workflows/: ci.yml  publish.yml
benches/: benchmark.rs  performance_comparison.rs  real_world_benchmark.rs
examples/: axum_graphql.rs  basic_usage.rs  debug_batch.rs
src/: batcher.rs  cache.rs  error.rs  lib.rs  loader.rs  metrics.rs
src/integrations/: mod.rs  sqlx.rs
