[package]
name = "async-graphql-dataloader"
version = "0.1.0"
edition = "2021"
description = "A high-performance DataLoader implementation for async-graphql with batching and caching"
authors = ["Cleiton Augusto Correa Bezerra <seu-email@dominio.com>"]
license = "MIT"
repository = "https://github.com/cleitonaugusto/async-graphql-dataloader"
documentation = "https://docs.rs/async-graphql-dataloader"
readme = "README.md"
keywords = ["graphql", "dataloader", "async", "batch", "cache"]
categories = ["asynchronous", "web-programming", "api-bindings"]

[dependencies]
async-trait = "0.1"
dashmap = "5.0"
tokio = { version = "1.0", features = ["sync", "time", "macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
async-graphql = { version = "5.0", optional = true }
serde_json = "1.0"
futures = "0.3"

[features]
default = []
graphql = ["async-graphql"]

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }

[[example]]
name = "basic_usage"

[[example]]
name = "axum_graphql"